# FileSortify

./: .gitignore  APPLE_SUBSCRIPTION_SETUP.md  I18N_IMPLEMENTATION.md  REACT_MIGRATION.md  README.md  SECURITY_IMPROVEMENTS.md  UPDATE_SETUP.md  UPDATE_SYSTEM.md  index.html  package.json  pnpm-lock.yaml  reset-subscription.cjs  test-updater.sh  tsconfig.node.json  vite.config.mjs  vite.config.ts
.github/workflows/: build-and-release.yml  security-updates.yml
.kiro/steering/: product.md  structure.md  tech.md
public/: updates.json
scripts/: generate-update-json.js  generate-update-with-signatures.cjs  generate-update-with-signatures.js  setup-apple-subscription.sh
src/: App.tsx  index.html  main.tsx  script.js  style.css  test-i18n.tsx
src-backup/: index.html  script.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apple_subscription.rs  autostart.rs  config.rs  file_organizer.rs  i18n.rs  main.rs  settings.rs  storekit.h  storekit.m  storekit_bridge.rs  subscription.rs
src-tauri/src/updater/: github.rs  mod.rs  scheduler.rs
src/components/: CreemSubscriptionView.tsx  Dashboard.tsx  HistoryView.tsx  LogsView.tsx  OrganizeView.tsx  RulesView.tsx  SettingsView.tsx  Sidebar.tsx  SubscriptionView.tsx  UpdateDialog.tsx  UpdateSettings.tsx
src/contexts/: I18nContext.tsx  LoggerContext.tsx
src/hooks/: useConfig.ts  useLogger.ts  useStats.ts  useTranslation.ts
src/locales/: en.json  zh.json
src/stores/: configStore.ts  historyStore.ts  index.ts  (+4 more)
(+7 files in other folders)
